<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mycompany</groupId>
    <artifactId>ProyectoSistemaExperto</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <exec.mainClass>com.mycompany.proyectosistemaexperto.ProyectoSistemaExperto</exec.mainClass>
    </properties>

    <!-- ========================================================= -->
    <!--                DEPENDENCIAS DEL PROYECTO                  -->
    <!-- ========================================================= -->
    <dependencies>

        <!-- JPL instalado manualmente -->
        <dependency>
            <groupId>org.swi-prolog</groupId>
            <artifactId>jpl</artifactId>
            <version>7.6.0</version>
        </dependency>

    </dependencies>


    <!-- ========================================================= -->
    <!--                       PLUGINS                              -->
    <!-- ========================================================= -->
    <build>
        <plugins>

            <!-- Plugin para ejecutar con "mvn exec:java" -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
